* January 2 2006, Arno Klenke *

Added the ACPI busmanager
Support for acpi irq routing in the PCI busmanager

---- 0.6.0a Released -------------------------------------------------------------------

* December 26 2005, Kristian Van Der Vliet *

Fixed both mkhome & Users & Groups preferences to work correctly together.  mkhome
now accepts two arguments; the new home directory to create and the username of
the owner.  Users & Groups has been changed to path these arguments.

* December 19 2005, Kaj de Vos *

Over the course of the last week, made a lot of fixes for Syllable 0.6.0a.
See the commit messages and the 0.6.0a Builder profile.

* December 17 2005, Kaj de Vos *

Added Dutch translations for
- Locale preference applet
- Xpdf (source of which hasn't been imported yet)

Extended the Dutch translation for AEdit for version 2.1. Reconstructed my old
improvements to the ancient translation, which were lost in the upgrade.

Made minor corrections to the corresponding English texts.

* December 10 2005, Kaj de Vos *

Added Dutch translations by Rik van Achterberg for
- LibSyllable
- Media Player
- ColdFish
- ColdFish Remote
- Launch
- CatComp

Made some minor corrections to the corresponding English texts.

Added binary versions of some translations and fixed LibSyllable to install
its catalogs in the system.

---- 0.6.0 Released -------------------------------------------------------------------

* November 28 2005, Arno Klenke *

The appserver should now close the applications more reliable

* November 18 2005, Arno Klenke *

The registrar now supports relative icon paths

* October 14 2005, Arno Klenke *

Stretched blits are now supported in DM_BLEND mode
Added the possibility to set the size for maximized windows

* October 11 2005, Arno Klenke *

Fixed a special case in the focus handling code of the appserver

* October 8 2005, Kristian Van Der Vliet *

Improve drive probing in the ATA driver and always use ATAPI block
size of 2048
