@@ -1,3 +1,7 @@
+* January 8 2006, Kaj de Vos *
+
+Fixed package-specific initialization in /system/user_init.sh.
+
 * January 2 2006, Arno Klenke *
 
 Added the ACPI busmanager
@@ -957,5 +961,4 @@ Added the following keymaps:
 * Jun 14 2002, Kristian Van Der Vliet *
 
 Implement get_tld(), set_tld() in process.c
-
 
